--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
-<html>
-    <head>
-        <title>Welcome!</title>
-    </head>
-    <body>
-        <h1>Hello, NIX Education</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My project</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="pos-center">
+    <nav class="container">
+        <a href="#">урок 1</a>
+        <a href="#">урок 2</a>
+    </nav>
+</header>
+
+<main>
+    <div class="container">
+        Main content
+    </div>
+</main>
+
+<footer class="pos-center">
+    <div class="container">footer</div>
+</footer>
+
+</body>
 </html>
