--- a/lesson-1.html
+++ b/lesson-1.html
@@ -8,14 +8,17 @@
 <body>
 <header class="pos-center">
     <nav class="container">
-        <a href="lesson-1.html">урок 1</a>
+        <a href="#">урок 1</a>
         <a href="#">урок 2</a>
     </nav>
 </header>
 
 <main>
     <div class="container">
-        Main content
+        <table class="table">
+            <tbody id="table-content">
+            </tbody>
+        </table>
     </div>
 </main>
 
@@ -23,5 +26,6 @@
     <div class="container">footer</div>
 </footer>
 
+<script src="main.js"></script>
 </body>
 </html>
