add color for table

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -8,8 +8,8 @@
 <body>
 <header class="pos-center">
     <nav class="container">
-        <a href="#">урок 1</a>
-        <a href="#">урок 2</a>
+        <a href="lesson-1.html">урок 1</a>
+        <a href="lesson-2.html">урок 2</a>
     </nav>
 </header>
 
@@ -27,5 +27,8 @@
 </footer>
 
 <script src="main.js"></script>
+<script>
+    addTableContent();
+</script>
 </body>
 </html>
