--- a/lesson-2.html
+++ b/lesson-2.html
@@ -15,7 +15,10 @@
 
 <main>
     <div class="container">
-        Main content
+        <table class="table">
+            <tbody id="table-content">
+            </tbody>
+        </table>
     </div>
 </main>
 
@@ -23,5 +26,9 @@
     <div class="container">footer</div>
 </footer>
 
+<script src="main.js"></script>
+<script>
+    addTableContent(true);
+</script>
 </body>
 </html>
