--- a/lesson-2.html
+++ b/lesson-2.html
@@ -10,6 +10,7 @@
     <nav class="container">
         <a href="lesson-1.html">урок 1</a>
         <a href="lesson-2.html">урок 2</a>
+        <a href="lesson-3.html">урок 3</a>
     </nav>
 </header>
 
